fix: prevent search jump

--- a/scss/6-components/_header.scss
+++ b/scss/6-components/_header.scss
@@ -9,8 +9,9 @@
 
   &__hyperlink {
     display: inline-block;
-    margin-bottom: $cads-spacing-2;
+    margin-bottom: calc(cads-px($cads-spacing-2) - $cads-border-width-medium);
     color: $cads-header__link-colour;
+    border-bottom: $cads-border-width-medium solid transparent;
 
     &:hover {
       color: $cads-header__link-hover-colour;
